feat(backend): add Meetups tag to controller
